# graphite-rs

./: Cargo.toml
shaders/: equirect_fs.glsl  equirect_vs.glsl  pbr_fs.glsl  pbr_vs.glsl  tex2D_fs.glsl  tex2D_vs.glsl
src/: camera.rs  const_mesh.rs  geometry.rs  main.rs  model.rs  render.rs  render_types.rs  texture.rs
src/pipelines/: equirect.rs  mod.rs  pbr.rs  simple.rs
