[package]
name = "skinning"
version = "0.1.0"
authors = ["nodef0 <d2isgreat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.2.0"
base64 = "0.12" # handle embedded gltf data
cgmath = "0.17"
futures = "0.3.4"
gltf = "0.15"
image = "0.22"
shaderc = "0.6.2"
wgpu = "0.5.0"
winit = "0.20"
